# trace2e

./: .gitignore  Cargo.toml  DEMOS_SUMMARY.md  Dockerfile  LICENSE  Makefile  QUICKSTART_DEMOS.md  README.md  build.rs  compose.yaml  crates.js  docker-compose.yml  help.html  index.html  integration_tests.sh  otel-collector-config.yaml  rustfmt.toml  search-index.js  settings.html  src-files.js  test-lib.sh  tests.sh  trace2e-interactive.Dockerfile  trace2e-testsuite.Dockerfile  trace2e.Dockerfile
.github/workflows/: CI.yml  DEP.yml  ci.yml  dep.yml  docs.yml
crates/demos/: Cargo.toml  PRESENTATION.md  README.md  test_demos.sh
crates/demos/src/: lib.rs  logging.rs  macros.rs  orchestration.rs
crates/demos/trace2e_interactive/: Cargo.toml
crates/demos/trace2e_interactive/src/: lib.rs
crates/demos/trace2e_runner/: Cargo.toml  README.md
crates/demos/trace2e_runner/src/: lib.rs  main.rs
crates/demos/unattended_deletion_consent/: Cargo.toml
crates/demos/unattended_deletion_consent/src/: orchestration.rs
crates/stde2e/: Cargo.toml
crates/trace2e_client/: Cargo.toml  build.rs
crates/trace2e_client/benches/: p2m.rs
crates/trace2e_client/src/: lib.rs  o2m.rs  p2m.rs
crates/trace2e_core/: Cargo.toml  build.rs
crates/trace2e_core/benches/: main.rs  stdio.rs  trace2e.rs
crates/trace2e_core/src/: lib.rs
crates/trace2e_core/src/tests/: basic_integration.rs  compliance.rs  consent.rs  deletion.rs  fixtures.rs  mod.rs  provenance.rs  stress.rs
crates/trace2e_core/src/traceability/: api.rs  error.rs  m2m.rs  mod.rs  mode.rs  naming.rs  o2m.rs  p2m.rs  validation.rs
crates/trace2e_core/src/traceability/api/: m2m.rs  mod.rs  o2m.rs  p2m.rs  types.rs
crates/trace2e_core/src/traceability/core/: compliance.rs  consent.rs  mod.rs  provenance.rs  sequencer.rs
crates/trace2e_core/src/traceability/infrastructure/: mod.rs  naming.rs  validation.rs
crates/trace2e_core/src/traceability/services/: compliance.rs  consent.rs  mod.rs  provenance.rs  sequencer.rs
crates/trace2e_core/src/transport/: grpc.rs  loopback.rs  mod.rs  nop.rs
crates/trace2e_interactive/: Cargo.toml  README.md
crates/trace2e_interactive/src/: lib.rs
crates/trace2e_middleware/: Cargo.toml
crates/trace2e_middleware/src/: main.rs
demo/: README.md  run_demo.sh  trace2e.Dockerfile
demo/base/: trace2e-base.Dockerfile
demo/data/: benchmark0.out
demo/hyper/: README.md  compose.yaml  trace2e-hyper-client.Dockerfile  trace2e-hyper-server.Dockerfile  trace2e-hyper.Dockerfile
demo/playbooks/: benchmark0_rtt_client.trace2e  benchmark0_rtt_server.trace2e  scenario0_test.trace2e  scenario1_company_forward.trace2e  scenario1_company_receive.trace2e  scenario1_recruiter_receive.trace2e  scenario1_user_sends_cv.trace2e  scenario2_company_forward.trace2e  scenario2_company_receive.trace2e  scenario2_company_send.trace2e  scenario2_recruiter_receive.trace2e  scenario3_company_verify_deletion.trace2e  scenario3_recruiter_verify_deletion.trace2e  scenario3_user_verify_deletion.trace2e  scenario3_verify_deletion.trace2e
demo/scripts/: grant_consent.sh  monitor_consent.sh  run_benchmark0.sh  run_scenario1.sh  run_scenario2.sh  run_scenario3.sh
demo/stde2e/: README.md  compose.yaml
middleware/: Cargo.toml  build.rs
middleware/src/: identifier.rs  m2m_service.rs  main.rs  p2m_service.rs
patches/: hyper_example_gateway.patch  hyper_tokio.patch  tokioe2e.patch
proto/: m2m_api.proto  messages.proto  p2m.proto  p2m_api.proto  primitives.proto  trace2e.proto  trace2e_api.proto  user_api.proto
search.index/: 0002895e81a9.js  0019063005c7.js  001a70c697e0.js  001d514e2c49.js  002ef91d1724.js  0034a031f5b4.js  00361c04b188.js  00471f5be3.js  004806efe55d.js  004a309ffe65.js  0050fce2e421.js  0053be256e9f.js  0068a15c634e.js  007189746579.js  00794502a64b.js  008620cd5f56.js  0091138e2bf4.js  0092541e76d8.js  009ab90bed8a.js  009bd89fe244.js  009d0db6aab8.js  00a08a75a6dc.js  00a49b2a4245.js  00a6b4ac79.js  00b12c2cccf3.js  00bff512ff69.js  00c1eb1cd153.js  00c27234b1.js  00c5a5d8ec82.js  00c5d0fb0ead.js  00d026b3b9b6.js  00dc515c1156.js  00dc8e41cd6f.js  00df0e891777.js  00fb5d0875c0.js  00ff906d546d.js  010184aa74.js  012fbe58ff55.js  0131df84f925.js  0132f39ab7a9.js  (+3472 more)
src/: container.rs  containers.rs  identifier.rs  identifiers.rs  labels.rs  lib.rs  m2m_service.rs  main.rs  p2m_service.rs  provenance.rs
src/containers/: congestion.rs  (+6 more)
stde2e/: Cargo.toml
stde2e/benches/: io_benchmarks.rs
stde2e/examples/: file_forwarder.rs  file_forwarder_e2e.rs  tcp_client.rs  tcp_client_e2e.rs  tcp_server.rs  tcp_server_e2e.rs
stde2e/src/: fs.rs  io.rs  lib.rs  middleware.rs  net.rs
stde2e/tests/: file.rs  stream.rs
tests/: integration_1p.rs  integration_1p_1f.rs  integration_async_1p_mf.rs  integration_async_mp_1f.rs  integration_mp.rs  integration_mp_1t.rs  integration_mp_mt.rs  integration_sync.rs
trace2e_client/: Cargo.toml  build.rs
trace2e_client/benches/: p2m.rs
trace2e_client/src/: lib.rs
trace2e_core/: Cargo.toml  all.html  index.html  sidebar-items.js
trace2e_middleware/: Cargo.toml  build.rs
trace2e_middleware/benches/: main.rs  middleware.rs
trace2e_middleware/src/: grpc_service.rs  identifier.rs  lib.rs  m2m_service.rs  main.rs  p2m_dbus.rs  p2m_service.rs  user_service.rs
trace2e_middleware/src/labels/: compliance.rs  mod.rs  provenance.rs  tests.rs
trace2e_middleware/src/tests/: fixtures.rs  mod.rs
trace2e_middleware/src/traceability/: api.rs  api_p2m.rs  client.rs  error.rs  flow.rs  m2m.rs  message.rs  mod.rs  naming.rs  o2m.rs  p2m.rs  provenance.rs  reservation.rs  resource.rs  server.rs  tests.rs  trace2e.rs  types.rs  validation.rs  whyenf.rs
trace2e_middleware/src/traceability/core/: compliance.rs  mod.rs  provenance.rs  sequencer.rs
trace2e_middleware/src/traceability/layers/: compliance.rs  mock.rs  mock_compliance.rs  mod.rs  provenance.rs  sequencer.rs
trace2e_middleware/src/transport/: grpc.rs  loopback.rs  mod.rs  nop.rs
trace2e_middleware/tests/: integration_async_1p_mf.rs  integration_async_mp_1f.rs  integration_client.rs  integration_sync.rs
(+676 files in other folders)
