[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/mablr/trace2e"

[workspace]
resolver = "2"
members = [
    "trace2e_client",
    "trace2e_middleware",
    "stde2e"
]

[workspace.dependencies]
clap = "4"
criterion = "0.5"
sysinfo = "0.30"
once_cell = "1"
prost = "0.13"
rustix = "1"
thiserror = "2"
tokio = "1"
tonic = "0.13"
tonic-build = "0.13"
tonic-reflection = "0.13"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
