[workspace.package]
version = "0.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/mablr/trace2e"

[workspace]
resolver = "2"
members = [
    "crates/trace2e_client",
    "crates/trace2e_core",
    "crates/trace2e_middleware",
    "crates/stde2e",
    "crates/demos/unattended_deletion_consent",
    "crates/demos/trace2e_runner"
]

[workspace.dependencies]
anyhow = "1"
clap = "4"
criterion = "0.5"
dashmap = "6.1"
once_cell = "1"
prost = "0.13"
rustix = "1"
sysinfo = "0.30"
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tonic-reflection = "0.13"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
