[package]
name = "stde2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
futures = "0.3.30"
users = "0.11.0"
once_cell = "1.20.1"
trace2e_client = { path = "../trace2e_client" }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
trace2e_client = { path = "../trace2e_client", features = ["benchmarking"] }
tracing = "0.1.40"
tracing-subscriber = { version = " 0.3.18", features = ["env-filter", "fmt", "std"] }
clap = { version = "4", features = ["derive"] }