[package]
name = "stde2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
trace2e_client = { path = "../trace2e_client" }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
criterion.workspace = true

[[bench]]
name = "io_benchmarks"
harness = false