[package]
name = "trace2e_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
once_cell.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "p2m"
harness = false
