[package]
name = "trace2e_middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
procfs.workspace = true
prost.workspace = true
rustix = { workspace = true, features = ["system"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
tower = { workspace = true, features = ["filter"] }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }