[package]
name = "trace2e_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic.workspace = true
once_cell.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
o2m = []

[[bench]]
name = "p2m"
harness = false
