[package]
name = "trace2e_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
once_cell.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic.workspace = true
trace2e_core = { path = "../trace2e_core"}

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
o2m = []

[[bench]]
name = "p2m"
harness = false
