[package]
name = "trace2e_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
dashmap.workspace = true
prost.workspace = true
sysinfo = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tower = { workspace = true, features = ["filter", "timeout", "util"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures.workspace = true
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["logs", "grpc-tonic"] }
opentelemetry-appender-tracing = { workspace = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[features]
deletion_enforcement = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
