[package]
name = "trace2e_middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
trace2e_core = { path = "../trace2e_core" }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }

[features]
trace2e_tracing = ["trace2e_core/trace2e_tracing"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
